new file:   assets/css/font.css 	new file:   assets/css/github.css 	new file:   assets/css/theme.css 	new file:   assets/image/favicon.ico 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,60 @@
 <html>
 <head>
-<title>My name is</title>
-  <center><h1><font color="white">Меня зовут Алексей. Я родился на Сицилии, в 25-м году. Это — наша семья. Стою с родителями и сестрой Франческой. Я мало что помню о тех временах, разве что жизнь была тяжелой, а потом отец решил, что нам пора уезжать. Пересечь океан и начать новую жизнь. Никогда в жизни я не видел ничего подобного Эмпайр-Бэю. Он был прекрасен. Впрочем, трудно представить что-то более скверное и отвратительное, чем наша новая конура. Американская мечта... Скорее уж кошмар. Отец стал работать в порту у человека, который перевёз нас сюда. Он работал как проклятый, зарабатывал гроши и почти всё спускал в кабаке. Со временем меня отдали в школу. Мне нужен был английский, но чёрта с два я бы заговорил на нём с итальянцами. Там я и встретил Джо. Постепенно мы стали лучшими друзьями. Так как у обоих свистело в кармане, а пристойной работы не было, мы затеяли своё скромное дело. Что ж, тогда нам не повезло. На дворе стоял 43-й год. Шла война. Высадка на Сицилии, нужны были солдаты говорящие на итальянском. Мне было 18, и в тюрьму я не хотел. Кто сказал, что нельзя вернуться на Родину?<font></h1></center>
+<h3 class="mb-5 text-center font-weight-bold"><font color="text-blue"><a href="https://justforeducate.github.io/"><u>На главную</u></a></font></h3>
+<link rel="shortcut icon" href="assets/image/favicon.ico">
+<link id="font-style" rel="stylesheet" href="assets/css/font.css">
+<link rel="stylesheet" type="text/css" href="assets/css/github.css">
+<link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
+<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="JFE About">
+    <meta name="author" content="JFE">
+  <title>JFE About</title>
+  <center><h1><font color="white">Обо мне<font></h1>
+  <p><font size="5" color="white">Меня зовут по разному, но чаще всего Алексей<br>мне 20 лет<br>люблю IT технологии игры и прочее
+  <br>начинаю изучать языки программирования<br>учусь на 3 курсе<br>скучно...</b><font></p></center>
+ 
 </head>
-<body>
-<body style="background-color: #151515">
-</body>
 
+<body>
+
+<body style="background-color: #151515">
+ <align="right"><header class="header">
+ 
+
+        <div class="branding">
+			
+            <ul class="social-list list-inline mb-0 position-absolute">
+			<a class="text-blue" href="https://github.com/JustForEducate"><div class="css">
+            <div class="logo-github-small">
+            <div class="ear-one-left"></div>
+            <div class="ear-one-none"></div>
+            <div class="ear-one-right"></div>
+            <div class="ear-two-right"></div>
+            <div class="ear-two-none"></div>
+            <div class="ear-two-left"></div>
+            <div class="body-bottom"></div>
+            <div class="body-left-none"></div>
+            <div class="body-right-none"></div>
+            <div class="tail-end"></div>
+            <div class="tail-body"></div>
+            <div class="tail-body-spots"></div>
+            <div class="tail-end-none"></div>
+            <div class="tail-body-none"></div>
+            <div class="tail-tip"></div>
+            <div class="body-left"></div>
+            <div class="body-right"></div>
+            <div class="head"></div>
+            <div class="chin-left"></div>
+            <div class="chin-right"></div>
+            </div>
+            </div></a></ul>
+
+        </div><!--//branding-->
+
+    </header></align="right"><!--//header-->
+
+</body>
 
 </html>
