--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="JFE">
   <title>JFE About</title>
   <center><h1><font color="white">Обо мне<font></h1>
-  <p><font size="5" color="white">Меня зовут по разному, но чаще всего Алексей<br>мне 19 лет<br>люблю IT-технологии, игры и прочее
+  <p><font size="5" color="white">Меня зовут по разному, но чаще всего Алексей<br>мне 19 лет<br>люблю IT-технологии,<br>игры и прочее
   <br>начинаю изучать языки программирования<br>учусь на 3 курсе<br>скучно...</b><font></p></center>
  
 </head>
