--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>JFE About</title>
   <center><h1><font color="white">Обо мне<font></h1>
   <p><font size="5" color="white">Меня зовут по разному, но чаще всего Алексей<br>мне 19 лет<br>люблю IT-технологии,<br>игры и прочее
-  <br>начинаю изучать языки программирования<br>учусь на 3 курсе<br>скучно...</b><font></p></center>
+  <br>начинаю изучать языки программирования<br>учусь на 3 курсе</b><font></p></center>
  
 </head>
 
