--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="JFE About">
     <meta name="author" content="JFE">
   <title>JFE About</title>
-  <center><h1><font color="white">Обо мне<font></h1>
+  <center><h1><font color="#badf3c">Обо мне<font></h1>
   <p><font size="5" color="#badf3c">Меня зовут по разному, но чаще всего Алексей<br>мне 19 лет<br>люблю IT-технологии,<br>игры и прочее
   <br>начинаю изучать языки программирования<br>учусь на 3 курсе</b><font></p></center>
  
