--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="author" content="JFE">
   <title>JFE About</title>
   <center><h1><font color="#badf3c">Обо мне<font></h1>
-  <p><font size="5" color="#badf3c">Меня зовут по разному, но чаще всего Алексей<br>мне 20 лет<br>люблю IT-технологии,<br>игры и прочее
-  <br>начинаю изучать языки программирования<br>выучился</b><font></p>
+  <p><font size="5" color="#badf3c">Меня зовут по разному, но чаще всего Алексей<br>мне ? лет<br>люблю IT-технологии,<br>игры и прочее
+  <br>выучился</b><font></p>
   <p class="text-lovegame"><font size="5" color="#badf3c">Узнать больше нельзя, увы.<br>А забыл ещё вот<br>↓</b><font></p>
   <h1 class="text-lovegame"><font color="#badf3c">Моя любимая игра:</font></h1>
   <iframe src="https://store.steampowered.com/widget/393380/78726/" frameborder="0" width="646" height="190"></iframe></center>
