--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <p><font size="5" color="#badf3c">Меня зовут по разному, но чаще всего Алексей<br>мне ? лет<br>люблю IT-технологии,<br>игры и прочее.
   <br>Выучился на наладчика аппаратного и программного обеспечения</b><font></p>
   <p class="text-lovegame"><font size="5" color="#badf3c">Узнать больше нельзя, увы.<br>А забыл ещё вот<br>↓</b><font></p>
-  <h1 class="text-lovegame"><font color="#badf3c">Моя любимая игра:</font></h1>
-  <iframe src="https://store.steampowered.com/widget/393380/78726/" frameborder="0" width="646" height="190"></iframe></center>
+  <h1 class="text-lovegame"><font color="#badf3c">Мои любимые игры:</font></h1>
+  <iframe src="https://store.steampowered.com/widget/393380/78726/" frameborder="0" width="646" height="190"></iframe>
+  <iframe src="https://store.steampowered.com/widget/1643320/" frameborder="0" width="646" height="190"></iframe></center>
 </head>
 
 <body>
